[metadata]
name = katsdpservices
description = Common code used by services that make up the MeerKAT Science Data Processor, such as a common logging setup
long_description = file: README.md
long_description_content_type = text/markdown
license = Modified BSD
author = MeerKAT SDP Team
author_email = sdpdev+katsdpservices@sarao.ac.za
url = https://github.com/ska-sa/katsdpservices
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    netifaces
    pygelf >= 0.3.6
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
argparse =
    katsdptelstate

aiomonitor =
    aiomonitor

test =
    aiomonitor
    katsdptelstate
    pytest
